parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON vars aux_funcion main
Rule 2     program -> PROGRAM ID SEMICOLON vars main
Rule 3     program -> PROGRAM ID SEMICOLON aux_funcion main
Rule 4     program -> PROGRAM ID SEMICOLON main
Rule 5     main -> MAIN pn_current_function LPAREN RPAREN vars bloque
Rule 6     main -> MAIN pn_current_function LPAREN RPAREN bloque
Rule 7     aux_funcion -> funcion
Rule 8     aux_funcion -> funcion aux_funcion
Rule 9     funcion -> tipo_retorno MODULE ID pn_current_function LPAREN parametros RPAREN vars bloque
Rule 10    funcion -> tipo_retorno MODULE ID pn_current_function LPAREN parametros RPAREN bloque
Rule 11    funcion -> tipo_retorno MODULE ID pn_current_function LPAREN RPAREN vars bloque
Rule 12    funcion -> tipo_retorno MODULE ID pn_current_function LPAREN RPAREN bloque
Rule 13    vars -> VAR var
Rule 14    var -> tipo COLON lista_ids SEMICOLON
Rule 15    var -> tipo COLON lista_ids SEMICOLON var
Rule 16    tipo_retorno -> tipo
Rule 17    tipo_retorno -> VOID pn_current_type
Rule 18    tipo -> INT pn_current_type
Rule 19    tipo -> FLOAT pn_current_type
Rule 20    tipo -> CHAR pn_current_type
Rule 21    parametros -> tipo ID
Rule 22    parametros -> tipo ID COMMA parametros
Rule 23    lista_ids -> aux_lista_rec
Rule 24    aux_lista_rec -> aux_lista
Rule 25    aux_lista_rec -> aux_lista COMMA aux_lista_rec
Rule 26    aux_lista -> ID pn_add_symbol LSQUARE CTE_INT RSQUARE LSQUARE CTE_INT RSQUARE
Rule 27    aux_lista -> ID pn_add_symbol LSQUARE CTE_INT RSQUARE
Rule 28    aux_lista -> ID pn_add_symbol
Rule 29    escritura -> WRITE LPAREN aux_escritura RPAREN SEMICOLON
Rule 30    aux_escritura -> pn_push_write_operator letrero pn_write
Rule 31    aux_escritura -> pn_push_write_operator expresion pn_write
Rule 32    aux_escritura -> pn_push_write_operator letrero pn_write COMMA aux_escritura
Rule 33    aux_escritura -> pn_push_write_operator expresion pn_write COMMA aux_escritura
Rule 34    condicional -> WHILE pn_while_1 LPAREN expresion pn_while_2 RPAREN DO bloque pn_while_3
Rule 35    bloque -> LBRACKET estatutos RBRACKET
Rule 36    bloque -> LBRACKET RBRACKET
Rule 37    estatutos -> estatuto estatutos
Rule 38    estatutos -> estatuto
Rule 39    estatuto -> asignacion
Rule 40    estatuto -> condicional
Rule 41    estatuto -> escritura
Rule 42    estatuto -> retorno
Rule 43    estatuto -> lectura
Rule 44    estatuto -> decision
Rule 45    estatuto -> no_condicional
Rule 46    asignacion -> ID pn_push_operand_and_type dimensiones ASSIGN pn_push_operator expresion pn_assign SEMICOLON
Rule 47    asignacion -> ID pn_push_operand_and_type ASSIGN pn_push_operator expresion pn_assign SEMICOLON
Rule 48    retorno -> RETURN LPAREN expresion RPAREN
Rule 49    lectura -> READ LPAREN aux_lectura RPAREN SEMICOLON
Rule 50    aux_lectura -> pn_push_read_operator ID pn_push_operand_and_type pn_read
Rule 51    aux_lectura -> pn_push_read_operator ID pn_push_operand_and_type pn_read dimensiones
Rule 52    aux_lectura -> pn_push_read_operator ID pn_push_operand_and_type pn_read COMMA aux_lectura
Rule 53    aux_lectura -> pn_push_read_operator ID pn_push_operand_and_type pn_read dimensiones COMMA aux_lectura
Rule 54    letrero -> QUOTATION aux_letrero QUOTATION
Rule 55    letrero -> QUOTATION QUOTATION
Rule 56    aux_letrero -> CTE_CHAR
Rule 57    aux_letrero -> CTE_CHAR aux_letrero
Rule 58    decision -> IF LPAREN expresion pn_if_1 RPAREN THEN bloque pn_if_2
Rule 59    decision -> IF LPAREN expresion pn_if_1 RPAREN THEN bloque ELSE pn_else bloque pn_if_2
Rule 60    llamada -> ID LPAREN aux_llamada RPAREN SEMICOLON
Rule 61    aux_llamada -> expresion
Rule 62    aux_llamada -> expresion COMMA aux_llamada
Rule 63    no_condicional -> FOR ID pn_push_operand_and_type dimensiones ASSIGN pn_push_operator expresion pn_assign TO expresion pn_for_push_comparison pn_comparison pn_for_go_false DO bloque pn_for_go_back
Rule 64    no_condicional -> FOR ID pn_push_operand_and_type ASSIGN pn_push_operator expresion pn_assign TO expresion pn_for_push_comparison pn_comparison pn_for_go_false DO bloque pn_for_go_back
Rule 65    dimensiones -> LSQUARE expresion RSQUARE LSQUARE expresion RSQUARE
Rule 66    dimensiones -> LSQUARE expresion COMMA expresion RSQUARE
Rule 67    dimensiones -> LSQUARE expresion RSQUARE
Rule 68    expresion -> comparacion aux_expresion
Rule 69    expresion -> aux_comparacion
Rule 70    aux_expresion -> AND comparacion
Rule 71    aux_expresion -> OR comparacion
Rule 72    aux_expresion -> AND comparacion aux_expresion
Rule 73    aux_expresion -> OR comparacion aux_expresion
Rule 74    comparacion -> exp LESSTHAN pn_push_operator exp pn_comparison
Rule 75    comparacion -> exp GREATERTHAN pn_push_operator exp pn_comparison
Rule 76    comparacion -> exp EQUAL pn_push_operator exp pn_comparison
Rule 77    aux_comparacion -> exp LESSTHAN pn_push_operator exp pn_comparison
Rule 78    aux_comparacion -> exp GREATERTHAN pn_push_operator exp pn_comparison
Rule 79    aux_comparacion -> exp EQUAL pn_push_operator exp pn_comparison
Rule 80    aux_comparacion -> exp
Rule 81    exp -> termino pn_addition_substraction
Rule 82    exp -> termino pn_addition_substraction PLUS pn_push_operator exp
Rule 83    exp -> termino pn_addition_substraction MINUS pn_push_operator exp
Rule 84    termino -> factor pn_multiplication_division
Rule 85    termino -> factor pn_multiplication_division MULT pn_push_operator termino
Rule 86    termino -> factor pn_multiplication_division DIV pn_push_operator termino
Rule 87    factor -> LPAREN expresion RPAREN
Rule 88    factor -> PLUS var_cte
Rule 89    factor -> PLUS llamada
Rule 90    factor -> MINUS var_cte
Rule 91    factor -> MINUS llamada
Rule 92    factor -> var_cte
Rule 93    factor -> llamada
Rule 94    var_cte -> ID pn_push_operand_and_type
Rule 95    var_cte -> CTE_INT pn_push_constant_and_type
Rule 96    var_cte -> CTE_FLOAT pn_push_constant_and_type
Rule 97    pn_current_function -> <empty>
Rule 98    pn_current_type -> <empty>
Rule 99    pn_add_symbol -> <empty>
Rule 100   pn_push_constant_and_type -> <empty>
Rule 101   pn_push_operand_and_type -> <empty>
Rule 102   pn_push_operator -> <empty>
Rule 103   pn_addition_substraction -> <empty>
Rule 104   pn_multiplication_division -> <empty>
Rule 105   pn_assign -> <empty>
Rule 106   pn_push_read_operator -> <empty>
Rule 107   pn_read -> <empty>
Rule 108   pn_push_write_operator -> <empty>
Rule 109   pn_write -> <empty>
Rule 110   pn_comparison -> <empty>
Rule 111   pn_if_1 -> <empty>
Rule 112   pn_if_2 -> <empty>
Rule 113   pn_else -> <empty>
Rule 114   pn_while_1 -> <empty>
Rule 115   pn_while_2 -> <empty>
Rule 116   pn_while_3 -> <empty>
Rule 117   pn_for_push_comparison -> <empty>
Rule 118   pn_for_go_false -> <empty>
Rule 119   pn_for_go_back -> <empty>

Terminals, with rules where they appear

AND                  : 70 72
ASSIGN               : 46 47 63 64
CHAR                 : 20
COLON                : 14 15
COMMA                : 22 25 32 33 52 53 62 66
CTE_CHAR             : 56 57
CTE_FLOAT            : 96
CTE_INT              : 26 26 27 95
DIV                  : 86
DO                   : 34 63 64
ELSE                 : 59
EQUAL                : 76 79
FLOAT                : 19
FOR                  : 63 64
GREATERTHAN          : 75 78
ID                   : 1 2 3 4 9 10 11 12 21 22 26 27 28 46 47 50 51 52 53 60 63 64 94
IF                   : 58 59
INT                  : 18
LBRACKET             : 35 36
LESSTHAN             : 74 77
LPAREN               : 5 6 9 10 11 12 29 34 48 49 58 59 60 87
LSQUARE              : 26 26 27 65 65 66 67
MAIN                 : 5 6
MINUS                : 83 90 91
MODULE               : 9 10 11 12
MULT                 : 85
OR                   : 71 73
PLUS                 : 82 88 89
PROGRAM              : 1 2 3 4
QUOTATION            : 54 54 55 55
RBRACKET             : 35 36
READ                 : 49
RETURN               : 48
RPAREN               : 5 6 9 10 11 12 29 34 48 49 58 59 60 87
RSQUARE              : 26 26 27 65 65 66 67
SEMICOLON            : 1 2 3 4 14 15 29 46 47 49 60
THEN                 : 58 59
TO                   : 63 64
VAR                  : 13
VOID                 : 17
WHILE                : 34
WRITE                : 29
error                : 

Nonterminals, with rules where they appear

asignacion           : 39
aux_comparacion      : 69
aux_escritura        : 29 32 33
aux_expresion        : 68 72 73
aux_funcion          : 1 3 8
aux_lectura          : 49 52 53
aux_letrero          : 54 57
aux_lista            : 24 25
aux_lista_rec        : 23 25
aux_llamada          : 60 62
bloque               : 5 6 9 10 11 12 34 58 59 59 63 64
comparacion          : 68 70 71 72 73
condicional          : 40
decision             : 44
dimensiones          : 46 51 53 63
escritura            : 41
estatuto             : 37 38
estatutos            : 35 37
exp                  : 74 74 75 75 76 76 77 77 78 78 79 79 80 82 83
expresion            : 31 33 34 46 47 48 58 59 61 62 63 63 64 64 65 65 66 66 67 87
factor               : 84 85 86
funcion              : 7 8
lectura              : 43
letrero              : 30 32
lista_ids            : 14 15
llamada              : 89 91 93
main                 : 1 2 3 4
no_condicional       : 45
parametros           : 9 10 22
pn_add_symbol        : 26 27 28
pn_addition_substraction : 81 82 83
pn_assign            : 46 47 63 64
pn_comparison        : 63 64 74 75 76 77 78 79
pn_current_function  : 5 6 9 10 11 12
pn_current_type      : 17 18 19 20
pn_else              : 59
pn_for_go_back       : 63 64
pn_for_go_false      : 63 64
pn_for_push_comparison : 63 64
pn_if_1              : 58 59
pn_if_2              : 58 59
pn_multiplication_division : 84 85 86
pn_push_constant_and_type : 95 96
pn_push_operand_and_type : 46 47 50 51 52 53 63 64 94
pn_push_operator     : 46 47 63 64 74 75 76 77 78 79 82 83 85 86
pn_push_read_operator : 50 51 52 53
pn_push_write_operator : 30 31 32 33
pn_read              : 50 51 52 53
pn_while_1           : 34
pn_while_2           : 34
pn_while_3           : 34
pn_write             : 30 31 32 33
program              : 0
retorno              : 42
termino              : 81 82 83 85 86
tipo                 : 14 15 16 21 22
tipo_retorno         : 9 10 11 12
var                  : 13 15
var_cte              : 88 90 92
vars                 : 1 2 5 9 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON vars aux_funcion main
    (2) program -> . PROGRAM ID SEMICOLON vars main
    (3) program -> . PROGRAM ID SEMICOLON aux_funcion main
    (4) program -> . PROGRAM ID SEMICOLON main

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON vars aux_funcion main
    (2) program -> PROGRAM . ID SEMICOLON vars main
    (3) program -> PROGRAM . ID SEMICOLON aux_funcion main
    (4) program -> PROGRAM . ID SEMICOLON main

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON vars aux_funcion main
    (2) program -> PROGRAM ID . SEMICOLON vars main
    (3) program -> PROGRAM ID . SEMICOLON aux_funcion main
    (4) program -> PROGRAM ID . SEMICOLON main

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . vars aux_funcion main
    (2) program -> PROGRAM ID SEMICOLON . vars main
    (3) program -> PROGRAM ID SEMICOLON . aux_funcion main
    (4) program -> PROGRAM ID SEMICOLON . main
    (13) vars -> . VAR var
    (7) aux_funcion -> . funcion
    (8) aux_funcion -> . funcion aux_funcion
    (5) main -> . MAIN pn_current_function LPAREN RPAREN vars bloque
    (6) main -> . MAIN pn_current_function LPAREN RPAREN bloque
    (9) funcion -> . tipo_retorno MODULE ID pn_current_function LPAREN parametros RPAREN vars bloque
    (10) funcion -> . tipo_retorno MODULE ID pn_current_function LPAREN parametros RPAREN bloque
    (11) funcion -> . tipo_retorno MODULE ID pn_current_function LPAREN RPAREN vars bloque
    (12) funcion -> . tipo_retorno MODULE ID pn_current_function LPAREN RPAREN bloque
    (16) tipo_retorno -> . tipo
    (17) tipo_retorno -> . VOID pn_current_type
    (18) tipo -> . INT pn_current_type
    (19) tipo -> . FLOAT pn_current_type
    (20) tipo -> . CHAR pn_current_type

    VAR             shift and go to state 8
    MAIN            shift and go to state 10
    VOID            shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    vars                           shift and go to state 5
    aux_funcion                    shift and go to state 6
    main                           shift and go to state 7
    funcion                        shift and go to state 9
    tipo_retorno                   shift and go to state 11
    tipo                           shift and go to state 12

state 5

    (1) program -> PROGRAM ID SEMICOLON vars . aux_funcion main
    (2) program -> PROGRAM ID SEMICOLON vars . main
    (7) aux_funcion -> . funcion
    (8) aux_funcion -> . funcion aux_funcion
    (5) main -> . MAIN pn_current_function LPAREN RPAREN vars bloque
    (6) main -> . MAIN pn_current_function LPAREN RPAREN bloque
    (9) funcion -> . tipo_retorno MODULE ID pn_current_function LPAREN parametros RPAREN vars bloque
    (10) funcion -> . tipo_retorno MODULE ID pn_current_function LPAREN parametros RPAREN bloque
    (11) funcion -> . tipo_retorno MODULE ID pn_current_function LPAREN RPAREN vars bloque
    (12) funcion -> . tipo_retorno MODULE ID pn_current_function LPAREN RPAREN bloque
    (16) tipo_retorno -> . tipo
    (17) tipo_retorno -> . VOID pn_current_type
    (18) tipo -> . INT pn_current_type
    (19) tipo -> . FLOAT pn_current_type
    (20) tipo -> . CHAR pn_current_type

    MAIN            shift and go to state 10
    VOID            shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    aux_funcion                    shift and go to state 17
    main                           shift and go to state 18
    funcion                        shift and go to state 9
    tipo_retorno                   shift and go to state 11
    tipo                           shift and go to state 12

state 6

    (3) program -> PROGRAM ID SEMICOLON aux_funcion . main
    (5) main -> . MAIN pn_current_function LPAREN RPAREN vars bloque
    (6) main -> . MAIN pn_current_function LPAREN RPAREN bloque

    MAIN            shift and go to state 10

    main                           shift and go to state 19

state 7

    (4) program -> PROGRAM ID SEMICOLON main .

    $end            reduce using rule 4 (program -> PROGRAM ID SEMICOLON main .)


state 8

    (13) vars -> VAR . var
    (14) var -> . tipo COLON lista_ids SEMICOLON
    (15) var -> . tipo COLON lista_ids SEMICOLON var
    (18) tipo -> . INT pn_current_type
    (19) tipo -> . FLOAT pn_current_type
    (20) tipo -> . CHAR pn_current_type

    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    var                            shift and go to state 20
    tipo                           shift and go to state 21

state 9

    (7) aux_funcion -> funcion .
    (8) aux_funcion -> funcion . aux_funcion
    (7) aux_funcion -> . funcion
    (8) aux_funcion -> . funcion aux_funcion
    (9) funcion -> . tipo_retorno MODULE ID pn_current_function LPAREN parametros RPAREN vars bloque
    (10) funcion -> . tipo_retorno MODULE ID pn_current_function LPAREN parametros RPAREN bloque
    (11) funcion -> . tipo_retorno MODULE ID pn_current_function LPAREN RPAREN vars bloque
    (12) funcion -> . tipo_retorno MODULE ID pn_current_function LPAREN RPAREN bloque
    (16) tipo_retorno -> . tipo
    (17) tipo_retorno -> . VOID pn_current_type
    (18) tipo -> . INT pn_current_type
    (19) tipo -> . FLOAT pn_current_type
    (20) tipo -> . CHAR pn_current_type

    MAIN            reduce using rule 7 (aux_funcion -> funcion .)
    VOID            shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    funcion                        shift and go to state 9
    aux_funcion                    shift and go to state 22
    tipo_retorno                   shift and go to state 11
    tipo                           shift and go to state 12

state 10

    (5) main -> MAIN . pn_current_function LPAREN RPAREN vars bloque
    (6) main -> MAIN . pn_current_function LPAREN RPAREN bloque
    (97) pn_current_function -> .

    LPAREN          reduce using rule 97 (pn_current_function -> .)

    pn_current_function            shift and go to state 23

state 11

    (9) funcion -> tipo_retorno . MODULE ID pn_current_function LPAREN parametros RPAREN vars bloque
    (10) funcion -> tipo_retorno . MODULE ID pn_current_function LPAREN parametros RPAREN bloque
    (11) funcion -> tipo_retorno . MODULE ID pn_current_function LPAREN RPAREN vars bloque
    (12) funcion -> tipo_retorno . MODULE ID pn_current_function LPAREN RPAREN bloque

    MODULE          shift and go to state 24


state 12

    (16) tipo_retorno -> tipo .

    MODULE          reduce using rule 16 (tipo_retorno -> tipo .)


state 13

    (17) tipo_retorno -> VOID . pn_current_type
    (98) pn_current_type -> .

    MODULE          reduce using rule 98 (pn_current_type -> .)

    pn_current_type                shift and go to state 25

state 14

    (18) tipo -> INT . pn_current_type
    (98) pn_current_type -> .

    MODULE          reduce using rule 98 (pn_current_type -> .)
    COLON           reduce using rule 98 (pn_current_type -> .)
    ID              reduce using rule 98 (pn_current_type -> .)

    pn_current_type                shift and go to state 26

state 15

    (19) tipo -> FLOAT . pn_current_type
    (98) pn_current_type -> .

    MODULE          reduce using rule 98 (pn_current_type -> .)
    COLON           reduce using rule 98 (pn_current_type -> .)
    ID              reduce using rule 98 (pn_current_type -> .)

    pn_current_type                shift and go to state 27

state 16

    (20) tipo -> CHAR . pn_current_type
    (98) pn_current_type -> .

    MODULE          reduce using rule 98 (pn_current_type -> .)
    COLON           reduce using rule 98 (pn_current_type -> .)
    ID              reduce using rule 98 (pn_current_type -> .)

    pn_current_type                shift and go to state 28

state 17

    (1) program -> PROGRAM ID SEMICOLON vars aux_funcion . main
    (5) main -> . MAIN pn_current_function LPAREN RPAREN vars bloque
    (6) main -> . MAIN pn_current_function LPAREN RPAREN bloque

    MAIN            shift and go to state 10

    main                           shift and go to state 29

state 18

    (2) program -> PROGRAM ID SEMICOLON vars main .

    $end            reduce using rule 2 (program -> PROGRAM ID SEMICOLON vars main .)


state 19

    (3) program -> PROGRAM ID SEMICOLON aux_funcion main .

    $end            reduce using rule 3 (program -> PROGRAM ID SEMICOLON aux_funcion main .)


state 20

    (13) vars -> VAR var .

    MAIN            reduce using rule 13 (vars -> VAR var .)
    VOID            reduce using rule 13 (vars -> VAR var .)
    INT             reduce using rule 13 (vars -> VAR var .)
    FLOAT           reduce using rule 13 (vars -> VAR var .)
    CHAR            reduce using rule 13 (vars -> VAR var .)
    LBRACKET        reduce using rule 13 (vars -> VAR var .)


state 21

    (14) var -> tipo . COLON lista_ids SEMICOLON
    (15) var -> tipo . COLON lista_ids SEMICOLON var

    COLON           shift and go to state 30


state 22

    (8) aux_funcion -> funcion aux_funcion .

    MAIN            reduce using rule 8 (aux_funcion -> funcion aux_funcion .)


state 23

    (5) main -> MAIN pn_current_function . LPAREN RPAREN vars bloque
    (6) main -> MAIN pn_current_function . LPAREN RPAREN bloque

    LPAREN          shift and go to state 31


state 24

    (9) funcion -> tipo_retorno MODULE . ID pn_current_function LPAREN parametros RPAREN vars bloque
    (10) funcion -> tipo_retorno MODULE . ID pn_current_function LPAREN parametros RPAREN bloque
    (11) funcion -> tipo_retorno MODULE . ID pn_current_function LPAREN RPAREN vars bloque
    (12) funcion -> tipo_retorno MODULE . ID pn_current_function LPAREN RPAREN bloque

    ID              shift and go to state 32


state 25

    (17) tipo_retorno -> VOID pn_current_type .

    MODULE          reduce using rule 17 (tipo_retorno -> VOID pn_current_type .)


state 26

    (18) tipo -> INT pn_current_type .

    MODULE          reduce using rule 18 (tipo -> INT pn_current_type .)
    COLON           reduce using rule 18 (tipo -> INT pn_current_type .)
    ID              reduce using rule 18 (tipo -> INT pn_current_type .)


state 27

    (19) tipo -> FLOAT pn_current_type .

    MODULE          reduce using rule 19 (tipo -> FLOAT pn_current_type .)
    COLON           reduce using rule 19 (tipo -> FLOAT pn_current_type .)
    ID              reduce using rule 19 (tipo -> FLOAT pn_current_type .)


state 28

    (20) tipo -> CHAR pn_current_type .

    MODULE          reduce using rule 20 (tipo -> CHAR pn_current_type .)
    COLON           reduce using rule 20 (tipo -> CHAR pn_current_type .)
    ID              reduce using rule 20 (tipo -> CHAR pn_current_type .)


state 29

    (1) program -> PROGRAM ID SEMICOLON vars aux_funcion main .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON vars aux_funcion main .)


state 30

    (14) var -> tipo COLON . lista_ids SEMICOLON
    (15) var -> tipo COLON . lista_ids SEMICOLON var
    (23) lista_ids -> . aux_lista_rec
    (24) aux_lista_rec -> . aux_lista
    (25) aux_lista_rec -> . aux_lista COMMA aux_lista_rec
    (26) aux_lista -> . ID pn_add_symbol LSQUARE CTE_INT RSQUARE LSQUARE CTE_INT RSQUARE
    (27) aux_lista -> . ID pn_add_symbol LSQUARE CTE_INT RSQUARE
    (28) aux_lista -> . ID pn_add_symbol

    ID              shift and go to state 36

    lista_ids                      shift and go to state 33
    aux_lista_rec                  shift and go to state 34
    aux_lista                      shift and go to state 35

state 31

    (5) main -> MAIN pn_current_function LPAREN . RPAREN vars bloque
    (6) main -> MAIN pn_current_function LPAREN . RPAREN bloque

    RPAREN          shift and go to state 37


state 32

    (9) funcion -> tipo_retorno MODULE ID . pn_current_function LPAREN parametros RPAREN vars bloque
    (10) funcion -> tipo_retorno MODULE ID . pn_current_function LPAREN parametros RPAREN bloque
    (11) funcion -> tipo_retorno MODULE ID . pn_current_function LPAREN RPAREN vars bloque
    (12) funcion -> tipo_retorno MODULE ID . pn_current_function LPAREN RPAREN bloque
    (97) pn_current_function -> .

    LPAREN          reduce using rule 97 (pn_current_function -> .)

    pn_current_function            shift and go to state 38

state 33

    (14) var -> tipo COLON lista_ids . SEMICOLON
    (15) var -> tipo COLON lista_ids . SEMICOLON var

    SEMICOLON       shift and go to state 39


state 34

    (23) lista_ids -> aux_lista_rec .

    SEMICOLON       reduce using rule 23 (lista_ids -> aux_lista_rec .)


state 35

    (24) aux_lista_rec -> aux_lista .
    (25) aux_lista_rec -> aux_lista . COMMA aux_lista_rec

    SEMICOLON       reduce using rule 24 (aux_lista_rec -> aux_lista .)
    COMMA           shift and go to state 40


state 36

    (26) aux_lista -> ID . pn_add_symbol LSQUARE CTE_INT RSQUARE LSQUARE CTE_INT RSQUARE
    (27) aux_lista -> ID . pn_add_symbol LSQUARE CTE_INT RSQUARE
    (28) aux_lista -> ID . pn_add_symbol
    (99) pn_add_symbol -> .

    LSQUARE         reduce using rule 99 (pn_add_symbol -> .)
    COMMA           reduce using rule 99 (pn_add_symbol -> .)
    SEMICOLON       reduce using rule 99 (pn_add_symbol -> .)

    pn_add_symbol                  shift and go to state 41

state 37

    (5) main -> MAIN pn_current_function LPAREN RPAREN . vars bloque
    (6) main -> MAIN pn_current_function LPAREN RPAREN . bloque
    (13) vars -> . VAR var
    (35) bloque -> . LBRACKET estatutos RBRACKET
    (36) bloque -> . LBRACKET RBRACKET

    VAR             shift and go to state 8
    LBRACKET        shift and go to state 44

    vars                           shift and go to state 42
    bloque                         shift and go to state 43

state 38

    (9) funcion -> tipo_retorno MODULE ID pn_current_function . LPAREN parametros RPAREN vars bloque
    (10) funcion -> tipo_retorno MODULE ID pn_current_function . LPAREN parametros RPAREN bloque
    (11) funcion -> tipo_retorno MODULE ID pn_current_function . LPAREN RPAREN vars bloque
    (12) funcion -> tipo_retorno MODULE ID pn_current_function . LPAREN RPAREN bloque

    LPAREN          shift and go to state 45


state 39

    (14) var -> tipo COLON lista_ids SEMICOLON .
    (15) var -> tipo COLON lista_ids SEMICOLON . var
    (14) var -> . tipo COLON lista_ids SEMICOLON
    (15) var -> . tipo COLON lista_ids SEMICOLON var
    (18) tipo -> . INT pn_current_type
    (19) tipo -> . FLOAT pn_current_type
    (20) tipo -> . CHAR pn_current_type

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    MAIN            reduce using rule 14 (var -> tipo COLON lista_ids SEMICOLON .)
    VOID            reduce using rule 14 (var -> tipo COLON lista_ids SEMICOLON .)
    LBRACKET        reduce using rule 14 (var -> tipo COLON lista_ids SEMICOLON .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

  ! INT             [ reduce using rule 14 (var -> tipo COLON lista_ids SEMICOLON .) ]
  ! FLOAT           [ reduce using rule 14 (var -> tipo COLON lista_ids SEMICOLON .) ]
  ! CHAR            [ reduce using rule 14 (var -> tipo COLON lista_ids SEMICOLON .) ]

    tipo                           shift and go to state 21
    var                            shift and go to state 46

state 40

    (25) aux_lista_rec -> aux_lista COMMA . aux_lista_rec
    (24) aux_lista_rec -> . aux_lista
    (25) aux_lista_rec -> . aux_lista COMMA aux_lista_rec
    (26) aux_lista -> . ID pn_add_symbol LSQUARE CTE_INT RSQUARE LSQUARE CTE_INT RSQUARE
    (27) aux_lista -> . ID pn_add_symbol LSQUARE CTE_INT RSQUARE
    (28) aux_lista -> . ID pn_add_symbol

    ID              shift and go to state 36

    aux_lista                      shift and go to state 35
    aux_lista_rec                  shift and go to state 47

state 41

    (26) aux_lista -> ID pn_add_symbol . LSQUARE CTE_INT RSQUARE LSQUARE CTE_INT RSQUARE
    (27) aux_lista -> ID pn_add_symbol . LSQUARE CTE_INT RSQUARE
    (28) aux_lista -> ID pn_add_symbol .

    LSQUARE         shift and go to state 48
    COMMA           reduce using rule 28 (aux_lista -> ID pn_add_symbol .)
    SEMICOLON       reduce using rule 28 (aux_lista -> ID pn_add_symbol .)


state 42

    (5) main -> MAIN pn_current_function LPAREN RPAREN vars . bloque
    (35) bloque -> . LBRACKET estatutos RBRACKET
    (36) bloque -> . LBRACKET RBRACKET

    LBRACKET        shift and go to state 44

    bloque                         shift and go to state 49

state 43

    (6) main -> MAIN pn_current_function LPAREN RPAREN bloque .

    $end            reduce using rule 6 (main -> MAIN pn_current_function LPAREN RPAREN bloque .)


state 44

    (35) bloque -> LBRACKET . estatutos RBRACKET
    (36) bloque -> LBRACKET . RBRACKET
    (37) estatutos -> . estatuto estatutos
    (38) estatutos -> . estatuto
    (39) estatuto -> . asignacion
    (40) estatuto -> . condicional
    (41) estatuto -> . escritura
    (42) estatuto -> . retorno
    (43) estatuto -> . lectura
    (44) estatuto -> . decision
    (45) estatuto -> . no_condicional
    (46) asignacion -> . ID pn_push_operand_and_type dimensiones ASSIGN pn_push_operator expresion pn_assign SEMICOLON
    (47) asignacion -> . ID pn_push_operand_and_type ASSIGN pn_push_operator expresion pn_assign SEMICOLON
    (34) condicional -> . WHILE pn_while_1 LPAREN expresion pn_while_2 RPAREN DO bloque pn_while_3
    (29) escritura -> . WRITE LPAREN aux_escritura RPAREN SEMICOLON
    (48) retorno -> . RETURN LPAREN expresion RPAREN
    (49) lectura -> . READ LPAREN aux_lectura RPAREN SEMICOLON
    (58) decision -> . IF LPAREN expresion pn_if_1 RPAREN THEN bloque pn_if_2
    (59) decision -> . IF LPAREN expresion pn_if_1 RPAREN THEN bloque ELSE pn_else bloque pn_if_2
    (63) no_condicional -> . FOR ID pn_push_operand_and_type dimensiones ASSIGN pn_push_operator expresion pn_assign TO expresion pn_for_push_comparison pn_comparison pn_for_go_false DO bloque pn_for_go_back
    (64) no_condicional -> . FOR ID pn_push_operand_and_type ASSIGN pn_push_operator expresion pn_assign TO expresion pn_for_push_comparison pn_comparison pn_for_go_false DO bloque pn_for_go_back

    RBRACKET        shift and go to state 51
    ID              shift and go to state 60
    WHILE           shift and go to state 61
    WRITE           shift and go to state 62
    RETURN          shift and go to state 63
    READ            shift and go to state 64
    IF              shift and go to state 65
    FOR             shift and go to state 66

    estatutos                      shift and go to state 50
    estatuto                       shift and go to state 52
    asignacion                     shift and go to state 53
    condicional                    shift and go to state 54
    escritura                      shift and go to state 55
    retorno                        shift and go to state 56
    lectura                        shift and go to state 57
    decision                       shift and go to state 58
    no_condicional                 shift and go to state 59

state 45

    (9) funcion -> tipo_retorno MODULE ID pn_current_function LPAREN . parametros RPAREN vars bloque
    (10) funcion -> tipo_retorno MODULE ID pn_current_function LPAREN . parametros RPAREN bloque
    (11) funcion -> tipo_retorno MODULE ID pn_current_function LPAREN . RPAREN vars bloque
    (12) funcion -> tipo_retorno MODULE ID pn_current_function LPAREN . RPAREN bloque
    (21) parametros -> . tipo ID
    (22) parametros -> . tipo ID COMMA parametros
    (18) tipo -> . INT pn_current_type
    (19) tipo -> . FLOAT pn_current_type
    (20) tipo -> . CHAR pn_current_type

    RPAREN          shift and go to state 68
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    parametros                     shift and go to state 67
    tipo                           shift and go to state 69

state 46

    (15) var -> tipo COLON lista_ids SEMICOLON var .

    MAIN            reduce using rule 15 (var -> tipo COLON lista_ids SEMICOLON var .)
    VOID            reduce using rule 15 (var -> tipo COLON lista_ids SEMICOLON var .)
    INT             reduce using rule 15 (var -> tipo COLON lista_ids SEMICOLON var .)
    FLOAT           reduce using rule 15 (var -> tipo COLON lista_ids SEMICOLON var .)
    CHAR            reduce using rule 15 (var -> tipo COLON lista_ids SEMICOLON var .)
    LBRACKET        reduce using rule 15 (var -> tipo COLON lista_ids SEMICOLON var .)


state 47

    (25) aux_lista_rec -> aux_lista COMMA aux_lista_rec .

    SEMICOLON       reduce using rule 25 (aux_lista_rec -> aux_lista COMMA aux_lista_rec .)


state 48

    (26) aux_lista -> ID pn_add_symbol LSQUARE . CTE_INT RSQUARE LSQUARE CTE_INT RSQUARE
    (27) aux_lista -> ID pn_add_symbol LSQUARE . CTE_INT RSQUARE

    CTE_INT         shift and go to state 70


state 49

    (5) main -> MAIN pn_current_function LPAREN RPAREN vars bloque .

    $end            reduce using rule 5 (main -> MAIN pn_current_function LPAREN RPAREN vars bloque .)


state 50

    (35) bloque -> LBRACKET estatutos . RBRACKET
